# auditmind

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
auditmind/: config.py  logger.py
auditmind/agents/: base_agent.py  compliance_agent.py  cost_agent.py  performance_agent.py  security_agent.py
auditmind/api/: main.py  middleware.py
auditmind/api/routes/: audit.py  health.py  report.py
auditmind/db/: crud.py  models.py  session.py
auditmind/ingestion/: file_parser.py  github_client.py
auditmind/orchestrator/: graph.py  state.py  supervisor.py
auditmind/report/: pdf_generator.py
auditmind/synthesis/: deduplicator.py  scorer.py  summariser.py
auditmind/tools/: ast_tool.py  bandit_tool.py  semgrep_tool.py  terraform_tool.py
auditmind/worker/: celery_app.py  tasks.py
docker/: Dockerfile.api  Dockerfile.worker
mlflow_tracking/: tracker.py
scripts/: debug_compliance_agent.py  list_models.py  run_audit_cli.py
