# pyproject.toml

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "auditmind"
version = "0.1.0"
description = "Autonomous multi-agent code and infra audit system"
requires-python = ">=3.12"

dependencies = [
    # LangChain + LangGraph
    "langchain>=0.2.0",
    "langchain-google-genai>=1.0.0",
    "langgraph>=0.1.0",

    # config + validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # logging
    "python-json-logger>=2.0.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
]

worker = [
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "reportlab>=4.0.0",
    "mlflow>=2.13.0",
]

dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",           # async test client for FastAPI
]

[tool.setuptools.packages.find]
where = ["."]
include = ["auditmind*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"